labour/test/invalid/invalid_missing_shape.labour
// INVALID (rule 12): hold "0002" has no shape property.
bouldering_wall "NoShapeWall" {
  routes [
    bouldering_route "shapeless" {
      grade: "5A",
      grid_base_point { x: 0, y: 0 },
      holds ["0001", "0002"]
    }
  ],
  volumes [
    circle {
      pos: { x: 50, y: 50 },
      depth: 10,
      radius: 30,
      front_holds [
        hold "0001" {
          pos: { x: 0, y: 0 },
          shape: "1",
          colours [ red ],
          start_hold: 1
        },
        hold "0002" {
          pos: { x: 5, y: 5 },
          colours [ red ]
        }
      ]
    }
  ]
}
